cc_library(
    name = "empty",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "mainA",
    srcs = ["main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//hal/brake",
        "//hal/encoder",
        "//peekA",
    ],
)

cc_binary(
    name = "mainB",
    srcs = ["main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//hal/brake",
        "//hal/encoder",
        "//peekB",
    ],
)
