load("//hal:defs.bzl", "require_mach_implementation")

mach = require_mach_implementation("encoder")

cc_library(
    name = "encoder",
    srcs = ["encoder.cpp"] + mach,
    hdrs = ["encoder.h"],
    includes = ["."],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = mach,
)
